Fix double border

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -109,12 +109,14 @@ body {
           rgba(69, 15, 174, 0.95),
           rgba(69, 15, 174, 0.5)
         );
-        border-left: 2px solid white;
       }
       @include breakpoints.down("md") {
         border-top: 0;
         border-left: 0;
         border-right: 0;
+        & > ul {
+          border-left: 2px solid white;
+        }
       }
     }
 
